Add exports for controlsfx